# knight-crawler-scrapers-dirty

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  cli.ps1  cli.sh  example_data_page1.json  eztv_showlist.json  pyproject.toml  scrape_eztv.ps1  scrape_eztv.sh  showlist.json  start_a_consumer.ps1  start_a_consumer.sh  start_producer.ps1  start_producer.sh
src/scrapers/: .env.example  cli.py  config.py  consumer.py  logging.py  main.py  producer.py
src/scrapers/eztv/: process.py  scrape.py  scrape_old.py  scraper-rewrite#2.py  scraper.py
src/scrapers/models/: media.py  media_collection.py
src/scrapers/scrapers/: eztv.py
src/scrapers/services/: knightcrawler.py
src/scrapers/util/: config.py  show.py  showlist.py  util.py
src/scrapers/utility/: message_queue.py
tests/: conftest.py
tests/models/: test_media.py  test_media_collection.py
tests/utility/: test_message_queue.py
typings/lxml/: ElementInclude.pyi  __init__.pyi  _elementpath.pyi  builder.pyi  cssselect.pyi  doctestcompare.pyi  sax.pyi
typings/lxml/html/: __init__.pyi  _setmixin.pyi
typings/lxml/isoschematron/: __init__.pyi
typings/scrapers/: config.pyi
typings/scrapers/models/: media.pyi  media_collection.pyi
typings/scrapers/scrapers/models/: media.pyi  media_collection.pyi
