[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = ""
authors = ["purple_emily <purple_emily@protonmail.com>"]
readme = "README.md"
packages = [{ include = "scrapers", from = "src" }]


[tool.poetry.dependencies]
aiofiles = "^23.2.1"
aiolimiter = "^1.1.0"
arrow = "^1.3.0"
asyncpg = "^0.29.0"
httpx = "^0.26.0"
loguru = "^0.7.2"
lxml = "^5.1.0"
python = "^3.12"
python-dotenv = "^1.0.1"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.351"
pytest = "^8.0.1"
ruff = "^0.2.2"


[tool.pyright]
strict = ["src/scrapers/*.py"]
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedImport = true


[tool.ruff]
fix = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
